--- a/index.html
+++ b/index.html
@@ -1,70 +1,105 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Akanksha's Personal Site</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Engineer Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+<body class="bg-gray-100 text-gray-900">
+    <header class="bg-blue-600 text-white p-6">
+        <h1 class="text-4xl font-bold">John Doe</h1>
+        <p class="text-lg">Aspiring Software Engineer</p>
+    </header>
 
-<body>
-  <table cellspacing="20">
-    <tr>
-      <td><img src="image.jpg" alt="Profile Picture"></td>
-      <td>
-        <h1>Akanksha Kumari</h1>
-        <p><em>Electrical Engineering Student Of IIT Jammu</em></p>
-        <p>I am a student. I love to do painting and sketching. I often like to dance and write poem.</p>
-      </td>
-    </tr>
-  </table>
-  <hr size="2">
-  <h3>Education</h3>
-  <ul>
-    <li>Matriculation- Lady KC Roy Memorial School</li>
-    <li>Intermediate- DAV Public School</li>
-  </ul>
-  <hr size="2">
-  <h3>My Hobbies</h3>
-  <ol>
-    <li><a href="https://www.instagram.com/paint.twist/">Painting and Sketching</a></li>
-    <li>Dancing and Photography</li>
-    <li>Watching movies and Anime</li>
-  </ol>
-  <hr size="2">
-  <h3>Qualification</h3>
-  <table cellspacing="10">
-    <thead>
-      <th>Year</th>
-      <th>Eduction</th>
-    </thead>
-    <tr>
-      <td>2019</td>
-      <td>Matriculation</td>
-    </tr>
-    <tr>
-      <td>2021</td>
-      <td>Intermediate</td>
-    </tr>
-  </table>
-  <hr size="2">
-  <h3>Skills</h3>
-  <table cellspacing="10">
-    <tr>
-      <td>Content writing</td>
-      <td>⭐⭐⭐</td>
+    <main class="container mx-auto p-6">
+        <section id="profile" class="my-8">
+            <h2 class="text-3xl font-semibold mb-4">Profile</h2>
+            <p>Hello! I'm John Doe, an aspiring software engineer currently seeking an internship opportunity. I'm passionate about coding, problem-solving, and continuous learning.</p>
+        </section>
 
-      <td>Painting</td>
-      <td>⭐⭐⭐⭐</td>
-    </tr>
-    <tr>
-      <td>Dance</td>
-      <td>⭐⭐⭐</td>
+        <section id="skills" class="my-8">
+            <h2 class="text-3xl font-semibold mb-4">Skills</h2>
+            <ul class="list-disc list-inside">
+                <li>JavaScript</li>
+                <li>HTML & CSS</li>
+                <li>Python</li>
+                <li>React</li>
+                <li>Node.js</li>
+            </ul>
+        </section>
 
-      <td>Sketching</td>
-      <td>⭐⭐⭐⭐</td>
-      </td>
-    </tr>
-  </table>
-  <a href="contact.html">Contact me</a>
+        <section id="certificates" class="my-8">
+            <h2 class="text-3xl font-semibold mb-4">Certificates</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">Certified JavaScript Developer</h3>
+                    <p>A certification demonstrating proficiency in JavaScript.</p>
+                    <a href="https://drive.google.com/file/d/1rIy1yxsd9vfhkKF_mwzOffj13Gu_TUvd/view?usp=sharing" class="text-blue-600">View Certificate</a>
+                </div>
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">HTML & CSS Mastery Certificate</h3>
+                    <p>A certification for mastery in HTML and CSS.</p>
+                    <a href="#" class="text-blue-600">View Certificate</a>
+                </div>
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">Python for Data Science Certification</h3>
+                    <p>A certification for using Python in data science.</p>
+                    <a href="#" class="text-blue-600">View Certificate</a>
+                </div>
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">React Professional Certificate</h3>
+                    <p>A professional certification in React development.</p>
+                    <a href="#" class="text-blue-600">View Certificate</a>
+                </div>
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">Node.js Developer Certification</h3>
+                    <p>A certification for proficiency in Node.js development.</p>
+                    <a href="#" class="text-blue-600">View Certificate</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects" class="my-8">
+            <h2 class="text-3xl font-semibold mb-4">Projects</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">Project 1</h3>
+                    <p>A web application to manage tasks and to-dos.</p>
+                    <a href="#" class="text-blue-600">View Project</a>
+                </div>
+                <div class="bg-white p-4 shadow rounded">
+                    <h3 class="text-2xl font-bold">Project 2</h3>
+                    <p>A weather forecast application using external APIs.</p>
+                    <a href="#" class="text-blue-600">View Project</a>
+                </div>
+            </div>
+        </section>
+
+        <section id="contact" class="my-8">
+            <h2 class="text-3xl font-semibold mb-4">Contact</h2>
+            <form id="contact-form" class="bg-white p-6 shadow rounded" action="mailto:akankshakumari86280@gmail.com" method="POST" enctype="text/plain">
+                <div class="mb-4">
+                    <label for="name" class="block text-sm font-medium text-gray-700">Name</label>
+                    <input type="text" id="name" name="name" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" required>
+                </div>
+                <div class="mb-4">
+                    <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+                    <input type="email" id="email" name="email" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" required>
+                </div>
+                <div class="mb-4">
+                    <label for="message" class="block text-sm font-medium text-gray-700">Message</label>
+                    <textarea id="message" name="message" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" rows="4" required></textarea>
+                </div>
+                <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded">Send Message</button>
+            </form>
+        </section>
+    </main>
+
+    <footer class="bg-gray-800 text-white text-center p-4">
+        <p>&copy; 2024 John Doe. All rights reserved.</p>
+    </footer>
+
+    <script src="app.js"></script>
 </body>
 </html>
