--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 </head>
 <body class="bg-gray-100 text-gray-900">
     <header class="bg-blue-600 text-white p-6">
-        <h1 class="text-4xl font-bold">John Doe</h1>
+        <h1 class="text-4xl font-bold">Akanksha Kumari</h1>
         <p class="text-lg">Aspiring Software Engineer</p>
     </header>
 
     <main class="container mx-auto p-6">
         <section id="profile" class="my-8">
             <h2 class="text-3xl font-semibold mb-4">Profile</h2>
-            <p>Hello! I'm John Doe, an aspiring software engineer currently seeking an internship opportunity. I'm passionate about coding, problem-solving, and continuous learning.</p>
+            <p>Hello! I'm Akanksha Kumari, an aspiring engineer currently seeking an internship opportunity. I'm passionate about coding, problem-solving, and continuous learning.</p>
         </section>
 
         <section id="skills" class="my-8">
@@ -97,7 +97,7 @@
     </main>
 
     <footer class="bg-gray-800 text-white text-center p-4">
-        <p>&copy; 2024 John Doe. All rights reserved.</p>
+        <p>&copy; 2024 Akanksha Kumari. All rights reserved.</p>
     </footer>
 
     <script src="app.js"></script>
